# MAVSDK

./: MAVSDKConfig.cmake.in
src/core/: global_include.cpp  global_include.h
src/plugins/: CMakeLists.txt
src/plugins/rc_passthrough/: CMakeLists.txt  PluginRC.cpp  PluginRC_impl.cpp
src/plugins/rc_passthrough/include/plugins/rc_passthrough/: PluginRC.h  PluginRC_impl.h
